Now looks better

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="AngelesQCorrea">
 
-    <title>AGP  p r o d u c c i o n e s</title>
+    <title>AGP  PRODUCCIONES</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -81,7 +81,7 @@
                 <div class="row">
                   <div class="col-md-8 col-md-offset-2">
                     <p class="intro-text">Aqui en algun momento ira un</p>
-                      <h1 class="brand-heading">Este es mi slogan</h1>
+                      <h1 class="brand-heading">sLOGAN DE MI EMPRESA</h1>
                       <a class="btn btn-default btn-lg" href="nosotros.html">Nosotros </a>
 
 
