some changes in the name

--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="AngelesQCorrea">
 
-    <title>AGP  p r o d u c c i o n e s</title>
+    <title>AGP  PRODUCCIONES</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
