--- a/servicios.html
+++ b/servicios.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="AngelesQCorrea">
 
-    <title>AGP  p r o d u c c i o n e s</title>
+    <title>AGP  PRODUCCIONES</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -76,7 +76,10 @@
 
 
  <header class="content-serviciosinterno">
-    </header>
+	<div class="text-center servicios-text">
+		<h2> Nuestros Servicios</h2>
+	</div>
+    </header>
 
 
 
