--- a/servicios.html
+++ b/servicios.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="AngelesQCorrea">
+    <meta name="author" content="Phronemos Agency">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
     <title>AGP  PRODUCCIONES</title>
 
