--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <a href="servicios.html">SERVICIOS</a>
                     </li>
                     <li>
-                        <a href="index.html">ESTUDIOS</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contacto</a>
@@ -105,7 +105,7 @@
 
 
 
-            <h2>STUDIO SERVICES</h2>
+            <h2>Nuestros Servicios</h2>
             <p >PRODUCING | TRACKING | MIXING | MASTERING </p>
 
                       <a class="btn btn-default btn-lg" href="servicios.html">servicios</a>
@@ -125,7 +125,7 @@
 
 
 
-            <h3>STUDIOS</h3>
+            <h3>Nuestros Estudios</h3>
             <p >STUDIO A | STUDIO B | POST PRODUCTION ROOM </p>
 
                       <a class="btn btn-default btn-lg">estudios</a>
