--- a/nosotros.html
+++ b/nosotros.html
@@ -56,10 +56,10 @@
 
 
                     <li>
-                        <a href="servicios.html">SERVICIOS</a>
+                        <a href="servicios.html">Servicios</a>
                     </li>
                     <li>
-                        <a href="index.html">ESTUDIOS</a>
+                        <a href="nosotros.html">Nosotros</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contacto</a>
